feat: publish ActiveSpot TCGDex traits image
